--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "test": "nyc karma start karma.conf.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,15 +18,19 @@
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.1.0",
     "gulp-uglify": "^3.0.0",
+    "istanbul": "^0.4.5",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
     "jshint": "^2.9.5",
     "karma": "^2.0.0",
     "karma-browserify": "^5.1.2",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.3.3",
+    "karma-istanbul": "0.0.2",
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-jquery": "^0.2.2",
+    "nyc": "^11.4.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.9.0"
   }
